feat: removing transactions
